vlib/v/checker/tests/sum_type_multiple_type_define.vv
struct Foo {}

type FooType = Foo | Foo
